# lab-attend-manage

./: .gitignore  README.md  frontdev.sh
back_end/: db.sqlite3  pyproject.toml
back_end/back_end/: settings.py  urls.py
back_end/tsunagaritai/: admin.py  apps.py  models.py  serializer.py  urls.py  views.py
back_end/tsunagaritai/migrations/: 0001_initial.py
front-end/: .gitignore  README.md  package-lock.json  package.json
front-end/src/: App.js  index.css  index.js
front-end/src/components/: AskHeader.js  Header.js  Index.js  LaboratoryCard.js  Layout.js  QuestionModal.js
front-end/src/pages/: Ask.js  Dog.js  Game.js  Pikachu.js  SignIn.js  SignUp.js  Top.js
front-end/src/pages/laboratory/: Detail.js  Edit.js  Index.js  New.js
front-end/src/pages/laboratory/schedule/: Index.js  New.js
front-end/src/pages/sandbox/: Ask.js  Counter.js  Dog.js  DragNDrop.js  Index.js  Netsh.js
front-end/src/pages/users/: Edit.js  Index.js  Log.js
front-end/src/utils/: apihooks.js  url.js
front-end/src/utils/auth/: Auth.js
swagger/: README.md  swagger.yaml
swagger/server/: package-lock.json  package.json
swagger/server/api/: swagger.yaml
swagger/server/controllers/: Default.js
swagger/server/service/: DefaultService.js
